// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusHistoryPopover when there are fewer than 4 status items does not set a fixed height for status items 1`] = `
<DocumentFragment>
  <button
    class="button-icon-only"
  >
    <svg
      style="width: 1.2rem; height: 1.2rem; fill: #767676;"
    >
      <use
        style="fill: #767676;"
        xlink:href="#i-list-unordered"
      />
    </svg>
  </button>
  <div
    class="popper-container"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 32px);"
  >
    <div
      id="arrow"
      style="position: absolute; left: 0px; transform: translate(0px, 0px);"
    />
    <div
      class="loading-panel"
      data-testid="loading"
    >
      <div
        class="status-items"
      >
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusHistoryPopover when there are fewer than 4 status items it matches snapshot when open 1`] = `
<DocumentFragment>
  <button
    class="button-icon-only"
  >
    <svg
      style="width: 1.2rem; height: 1.2rem; fill: #767676;"
    >
      <use
        style="fill: #767676;"
        xlink:href="#i-list-unordered"
      />
    </svg>
  </button>
  <div
    class="popper-container"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 32px);"
  >
    <div
      id="arrow"
      style="position: absolute; left: 0px; transform: translate(0px, 0px);"
    />
    <div
      class="loading-panel"
      data-testid="loading"
    >
      <div
        class="status-items"
      >
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusHistoryPopover when there are more than 4 status items sets a fixed height for the status items component 1`] = `
<DocumentFragment>
  <button
    class="button-icon-only"
  >
    <svg
      style="width: 1.2rem; height: 1.2rem; fill: #767676;"
    >
      <use
        style="fill: #767676;"
        xlink:href="#i-list-unordered"
      />
    </svg>
  </button>
  <div
    class="popper-container"
    data-popper-escaped="true"
    data-popper-placement="bottom"
    data-popper-reference-hidden="true"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 32px);"
  >
    <div
      id="arrow"
      style="position: absolute; left: 0px; transform: translate(0px, 0px);"
    />
    <div
      class="loading-panel"
      data-testid="loading"
    >
      <div
        class="status-items"
        style="height: 20rem; overflow: scroll;"
      >
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
        <div
          class="status-item"
          data-testid="status-item"
        >
          <div
            class="status-item-header"
          >
            <div
              class="status-pill is-approved"
            >
              Approved
            </div>
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="item-substatus-text"
          >
            Approval letter sent
          </div>
          <div
            class="status-item-text"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque bibendum condimentum lorem consectetur eleifend.
          </div>
          <div
            class="status-item-footer"
          >
            <div
              class="status-item-created-by"
            />
            <div
              class="status-item-date"
            >
              Aug 25, 2020 1:00 PM PDT
            </div>
          </div>
        </div>
      </div>
      <button
        class="button-link t-tiny"
        type="button"
      >
        Show all status updates
      </button>
    </div>
  </div>
</DocumentFragment>
`;
